# Columnar-Engine

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
cmake/: compile_options.cmake  dependencies.cmake
libs/catch/share/pkgconfig/: catch2-with-main.pc  catch2.pc
libs/glog/lib/: libglog.so.0.8.0
src/: CMakeLists.txt
src/csv_handler/: BatchedCsvReader.cpp  BatchedCsvReader.h  BatchedCsvWriter.cpp  BatchedCsvWriter.h  CMakeLists.txt  CsvReader.cpp  CsvReader.h  CsvWriter.cpp  CsvWriter.h
src/executable/: CMakeLists.txt  CreateTable.cpp  ExtractTable.cpp
src/interface/: CHSVConverter.cpp  CHSVConverter.h  CMakeLists.txt  CreateTable.cpp  ExtractTable.cpp
src/kernel/: Batch.cpp  Batch.h  BatchedCsvReader.h  BatchedCsvWriter.cpp  BatchedCsvWriter.h  BatchedReader.cpp  BatchedReader.h  BatchedWriter.cpp  BatchedWriter.h  CMakeLists.txt  Column.h  Metadata.cpp  Metadata.h  Schema.cpp  Schema.h  Types.h  Value.h  ValuePad.h
tests/: CMakeLists.txt  Fixtures.h
tests/csv/: BatchedCsvReader.cpp  BatchedCsvWriter.cpp  CMakeLists.txt  CsvReader.cpp  CsvWriter.cpp
tests/interface/: CMakeLists.txt  Converter.cpp
tests/kernel/: BatchedRW.cpp  BatchedWriter.cpp  CMakeLists.txt  Schema.cpp
tests/utils/: StringCsvConverter.h
